# dodeedum

./: .gitmodules  CMakeLists.txt  README.md
extensions/: dodeedum_fxgltf_bridge.cpp  dodeedum_fxgltf_bridge.h
include/: dodeedum.h  dodeedum_fasttri.hpp  dodeedum_mesh.h  dodeedum_skinning.h
src/: dodeedum.cpp  dodeedum_mesh.cpp  dodeedum_meshedges.cpp  dodeedum_meshedges.h  dodeedum_project2d.cpp  dodeedum_project2d.h  dodeedum_quadtree.cpp  dodeedum_quadtree.h  dodeedum_skinning.cpp  dodeedum_vertex_remapping.hpp
